<?xml version="1.0" encoding="utf-8"?>
<!--
    Author: Matt Harrington
    Email Address: matt2harrington@gmail.com
    Written: October 25th, 2018
    Last Updated: October 11th, 2018 by Matt Harrington

    Compilation:
    Execution:

    Description of Execution:
-->
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BGWhite">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:baselineAligned="false"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/Home"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="5dp"
                android:layout_alignParentStart="true"
                android:background="@drawable/ic_vaccination_home_teal" />

            <TextView
                android:id="@+id/MyHealthGraph"
                android:layout_width="185dp"
                android:layout_height="75dp"
                android:text="@string/vaccinationGraph"
                android:textColor="@color/GreenHuesMedium"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="5dp"
                android:layout_marginTop="5dp"
                android:textSize="30sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <TableLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="15dp"
            android:stretchColumns="*">

            <TableRow>

                <TextView
                    android:id="@+id/tableName"
                    android:layout_span="1"
                    android:padding="20dp"
                    android:text="@string/tableName"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tableTaken"
                    android:layout_span="2"
                    android:padding="20dp"
                    android:text="@string/tableTaken"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tableDate"
                    android:layout_span="3"
                    android:padding="20dp"
                    android:singleLine="true"
                    android:text="@string/tableDate"
                    android:textSize="15sp"
                    android:textStyle="bold" />

            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/fluShotTable"
                    android:layout_span="1"
                    android:padding="20dp"
                    android:text="@string/tableFluShot"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/fluShotTaken"
                    android:layout_span="2"
                    android:padding="20dp"
                    android:text=""
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/fluShotDate"
                    android:layout_span="3"
                    android:padding="20dp"
                    android:text=""
                    android:textSize="15sp" />

            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/shingleTable"
                    android:layout_span="1"
                    android:padding="20dp"
                    android:text="@string/tableShingle"
                    android:textSize="15sp" />
                <TextView
                    android:id="@+id/shingleTaken"
                    android:layout_span="2"
                    android:padding="20dp"
                    android:text=".."
                    android:textSize="15sp" />
                <TextView
                    android:id="@+id/shingleDate"
                    android:layout_span="3"
                    android:padding="20dp"
                    android:text="...."
                    android:textSize="15sp" />

            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/pneumoniaTable"
                    android:layout_span="1"
                    android:padding="20dp"
                    android:text="@string/tablePneumonia"
                    android:textSize="15sp" />
                <TextView
                    android:id="@+id/pneumoniaTaken"
                    android:layout_span="2"
                    android:padding="20dp"
                    android:text=".."
                    android:textSize="15sp" />
                <TextView
                    android:id="@+id/pneumoniaDate"
                    android:layout_span="3"
                    android:padding="20dp"
                    android:text="...."
                    android:textSize="15sp" />

            </TableRow>


        </TableLayout>


    </LinearLayout>

</android.support.constraint.ConstraintLayout>