<?xml version="1.0" encoding="utf-8"?>
<!--
    Author: Patrick Marlowe
    Email Address: pmarlowe782@gmail.com
    Written: June 22, 2018
    Last Updated: July 9, 2018

    Compilation:
    Execution:

    Description of Execution:
-->

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            >

            <ImageView
                android:id="@+id/AppLogo"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentLeft="true"
                app:srcCompat="@android:drawable/ic_menu_myplaces"/>

            <!--android:fontFamily="@font/catamaran_bold"-->
            <!--android:textColor="@color/colorPrimaryDark"-->
            <TextView
                android:id="@+id/AppName"
                android:layout_width="209dp"
                android:layout_height="80dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/healthAdvisor"
                android:textSize="30sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:layout_marginTop="75dp"
            android:gravity="center_horizontal"
            >
            <!-- Styling for the ovals and colors -->
            <!--android:backgroundTint="@color/colorPrimaryDark"-->
            <!--android:background="@drawable/mybutton"-->
            <!--android:fontFamily="@font/catamaran_bold"-->
            <!--android:textColor="@color/white"-->

            <Button
                android:id="@+id/MyHealthData"
                android:layout_width="200dp"
                android:layout_height="150dp"
                android:textSize="20sp"
                android:text="@string/myHealthData"/>

            <!-- Styling for the ovals and colors -->
            <!--android:backgroundTint="@color/colorPrimaryDark"-->
            <!--android:background="@drawable/mybutton"-->
            <!--android:fontFamily="@font/catamaran_bold"-->
            <!--android:textColor="@color/white"-->
            <Button
                android:id="@+id/HealthResources"
                android:layout_width="200dp"
                android:layout_height="150dp"
                android:layout_marginTop="30dp"
                android:textSize="20sp"
                android:text="@string/myHealthResources" />

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
